<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyFractions">
    <string name="app_name">Režim</string>
    <string name="pon_cet">Ponedjeljak / Četvrtak - Prsa / Ruke</string>
    <string name="uto_pet">Utorak / Petak - Noge</string>
    <string name="sri_sub">Srijeda / Subota - Trbuh</string>
    <string-array name="zagrijavanje_ruke">
        <item>zglobovi</item> 
        <item>laktovi</item>
        <item>ramena</item>
        <item>kruženje rukama</item>
        <item>dlan - stopalo</item>
        <item>kruženje tijela</item>
    </string-array>
    <string-array name="set1_prsa">
        <item>sklekovi</item>
        <item>stoj</item>
        <item>ruke gore</item>
        <item>dizanje ruku</item>
        <item>kretanje</item>
    </string-array>
    <string-array name="set2_prsa">
        <item>uski sklekovi</item>
        <item>uvučeni planche</item>
        <item>ruke naprijed</item>
        <item>ruke iza</item>
        <item>nagib / ravnoteža</item>
    </string-array>
    <string-array name="set3_prsa">
        <item>široki sklekovi</item>
        <item>hindu</item>
        <item>ruke iza</item>
        <item>dizanje ruku</item>
        <item>spori</item>
    </string-array>
    <string-array name="rastezanje_ruke">
        <item>adho mukha svanasana</item>
        <item>zglobovi</item>
        <item>ramena</item>
        <item>laktovi</item>
        <item>u stranu</item>
        <item>skroz dolje/gore</item>
        <item>vrat</item>
    </string-array>
    <string-array name="varijacije_prsa"> 
        <item>pod kutem</item>
        <item>pozicija ruku</item>
        <item>strijelci</item>
        <item>kretanja</item>
        <item>intenzitet</item>
        <item>ruke</item>
        <item>kombinacije</item>
    </string-array>
    <string name="text_zglobovi">Zagrijavanje zglobova:\n- kružno\n- gore-dolje\n- lijevo-desno\n- rotacija</string>
    <string name="text_laktovi">Zagrijavanje laktova:\n- kružno</string>
    <string name="text_ramena">Zagrijavanje ramena:\n- kružno</string>
    <string name="text_ruke">Zagrijavanje ruka:\n- kružno usko prema cijelim krugovima</string>
    <string name="default_txt">Default Text</string>
    <string-array name="sklekovi">
        <item>normalni sklek</item>
        <item>uski sklek</item>
        <item>široki sklek</item>
        <item>križni sklek</item>
        <item>prednji sklek</item>
        <item>nagnuti sklek</item>
    </string-array>
    <string-array name="stanga_ruke">
        <item>široko 90</item>
        <item>usko 80</item>
        <item>široko 80</item>
        <item>usko 70</item>
        <item>široko 70</item>
        <item>usko 60</item>
        <item>široko 60</item>
        <item>usko 50</item>
        <item>obje ruke</item>
    </string-array>
    <string-array name="sklek_vjestine">
        <item>stoj</item>
        <item>uvučeni planche</item>
        <item>hindu sklek</item>
        <item>jedna ruka sklek</item>
        <item>sklek strijelac</item>
    </string-array>
    <string-array name="sklek_stabilnost">
        <item>ruka gore sklek</item>
        <item>ruka ispred sklek</item>
        <item>ruka iza sklek</item>
        <item>ramena prstima</item>
    </string-array>
    <string-array name="ruke">
        <item>ruke sa strane</item>
        <item>ruke iza</item>
        <item>tijelo dolje</item>
        <item>dizanje ispred</item>
        <item>ruka iza</item>
    </string-array>
    <string-array name="sklek_kretanje">
        <item>sklek u stranu</item>
        <item>od gore dolje</item>
        <item>gušter</item>
        <item>spori sklek</item>
    </string-array>
    <string-array name="zagrijavanje_noge">
        <item>skip</item>
        <item>noge iza</item>
        <item>noge sa strane</item>
        <item>noge ispred</item>
        <item>visoki step</item>
        <item>skokovi</item>
        <item>noge van-unutra</item>
        <item>noge naprijed-nazad</item>
        <item>kruženje koljena</item>
    </string-array>
    <string-array name="razgibavanje_noge">
        <item>bokovi</item>
        <item>koljena</item>
        <item>zglobovi</item>
    </string-array>
    <string-array name="set1_noge">
        <item>čučnjevi</item>
        <item>rudari</item>
        <item>prsti</item>
        <item>utkatasana</item>
        <item>pokret</item>
    </string-array>
    <string-array name="set2_noge">
        <item>spartan</item>
        <item>jedna noga</item>
        <item>noga gore</item>
        <item>virabhadrasana II</item>
        <item>prebacivanje ravnoteže</item>
    </string-array>
    <string-array name="set3_noge">
        <item>čučnjevi ruke gore</item>
        <item>rudari iza</item>
        <item>noga u stranu</item>
        <item>držanje noge</item>
        <item>sporo</item>
    </string-array>
    <string-array name="rastezanje_noge">
        <item>noga ispred</item>
        <item>noga sastrane</item>
        <item>ženska špaga</item>
        <item>muška špaga</item>
        <item>dodir stopala</item>
        <item>malasana</item>
        
    </string-array>
    <string-array name="varijacije_noge">
        <item>intenzitet</item>
        <item>kombinacije</item>
        <item>kretanja</item>
    </string-array>
    <string-array name="cucnjevi">
        <item>ruke ispred čučanj</item>
        <item>ruke iznad čučanj</item>
        <item>noge usko čučanj</item>
        <item>noge široko čučanj</item>
    </string-array>
    <string-array name="rudari">
        <item>rudar naprijed</item>
        <item>rudar nazad</item>
        <item>noge u stranu</item>
        <item>noga iza ustranu</item>
    </string-array>
    <string-array name="razno_noge">
        <item>spartan</item>
        <item>jedna noga</item>
        <item>noga gore</item>
        <item>prsti</item>
    </string-array>
    <string-array name="stabilnost_noge">
        <item>utkatasana</item>
        <item>virabhadrasana I</item>
        <item>virabhadrasana II</item>
        <item>virabhadrasana III</item>
        <item>utthita padangusthasana</item> 
        <item>utthita parsvakonasana</item>
        <item>natarajasana</item>
    </string-array>
    <string-array name="noge">
        <item>noga u stranu</item>
        <item>noga ispred, iza</item>
        <item>s poda sa strane</item>
        <item>s poda ispred</item>
    </string-array>
    <string-array name="kretanje_noge">
        <item>čučanj u stranu</item>
        <item>spori čučanj</item>
        <item>naprijed nazad</item>
        <item>čučanj udarac</item>
    </string-array>
    <string-array name="zagrijavanje_trbuh">
        <item>penjač</item>
        <item>penjač unutra</item>
        <item>penjač sa strane</item>
        <item>ptica-pas</item>
        <item>bicikl</item>
    </string-array>
    <string-array name="set1_trbuh">
        <item>dodir peta</item>
        <item>lakat-koljeno</item>
        <item>ruke sa strane</item>
        <item>noge na prsa</item>
        <item>obje noge gore</item>
        <item>naizmjenično noga gore</item>
        <item>sklopke</item>
        <item>pune sklopke</item>
        <item>noge gore</item>
    </string-array>
    <string-array name="rastezanje_trbuh">
        <item>bhujangasana</item>
        <item>balasana</item>
        <item>bitilasana</item>
        <item>marjaryasana</item>
    </string-array>
    <string-array name="set2_trbuh">
        <item>sa strane</item>
        <item>ruka-stopalo</item>
        <item>u stranu</item>
        <item>noge brzo gore dolje</item>
        <item>noge brzo lijevo desno</item>
        <item>jedna noga gore</item>
        <item>ruke ispred</item> 
        <item>ispružene sklopke</item>
        <item>ruke gore</item>
    </string-array>
    <string-array name="plankovi">
        <item>ravni plank</item>
        <item>lijevi plank</item>
        <item>desni plank</item>
        <item>ležnjaci</item>
        <item>plank iza</item>
    </string-array>
    <string-array name="razno_trbuh">
        <item>držanje sklopke</item>
        <item>ukočeno tijelo</item>
        <item>buba</item>
        <item>dizanje kukova</item>
        <item>noge gore - u stranu</item>
        <item>krugovi s nogama</item>
        <item>obični</item>
        <item>dizanje ruku</item>
        <item>bicikl</item>
    </string-array>
    <string-array name="varijacije_trbuh">
        <item>intenzitet</item>
        <item>kombinacije</item>
    </string-array>
    <string-array name="trbuh_strana">
        <item>dodir pete</item>
        <item>lakat koljeno</item>
        <item>rotacija ruku</item>
        <item>sa strane</item>
        <item>ruka stopalo</item>
        <item>okret u stranu</item>
    </string-array>
    <string-array name="trbuh_dolje">
        <item>noge na prsa</item>
        <item>obje noge gore</item>
        <item>naizmjenično noga gore</item>
        <item>noge brzo gore dolje</item>
        <item>noge brzo lijevo desno</item>
        <item>jedna noga gore</item>
    </string-array>
    <string-array name="trbuh_gore">
        <item>sklopka</item>
        <item>puna sklopka</item>
        <item>noge gore</item>
        <item>ruke ispred</item>
        <item>ispružene sklopke</item>
        <item>rukama gore</item>
        <item>trbušnjak</item>
        <item>dizanje ruku</item>
    </string-array>
    <string-array name="plank">
        <item>ravni plank</item>
        <item>plank u stranu</item>
        <item>držanje sklopke</item>
        <item>ukočeno tijelo</item>
        <item>plank iza</item>
    </string-array>
    <string-array name="trbuh_stanga">
        <item>usko skvrčene</item>
        <item>usko ispružene</item>
        <item>široko skvrčene</item>
        <item>široko ispružene</item>
        <item>obje skvrčene</item>
        <item>obje ispružene</item>
    </string-array>
    <string-array name="trbuh_razno">
        <item>ležnjak</item>
        <item>dizanje kukova</item>
        <item>noge gore u stranu</item>
        <item>krugovi s nogama</item>
        <item>buba</item>
    </string-array>
    <string name="skills">Vještine</string>
    <string name="svjeze_voce">Svježe voće</string>
    <string name="suseno_voce">Sušeno voće</string>
    <string name="orasasto_voce">Orašasto voće</string>
    <string name="sjemenke">Sjemenke</string>
    <string-array name="bobice">
        <item>borovnice</item>
        <item>kupine</item>
        <item>maline</item>
        <item>ribiz</item>
        <item>višnje</item>
        <item>trešnje</item>
        <item>brusnice</item>
        <item>goji</item>
        <item>aronija</item>
        <item>bijela murva</item>
        <item>mjehurica</item>
    </string-array>
    <string name="clothes">Odjeća</string>
    <string-array name="todo">
        <item>Pisanje knjige</item>
        <item>Učenje njemačkog</item>
    </string-array>
    <string name="seed_desc">Sjemenke</string>
    <string name="clothes_desc">Odjeća</string>
    <string name="todo_desc">Todo</string>
    <string name="lorem" tools:ignore="Typos">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis euismod, mi nec maximus pretium, justo turpis feugiat odio, pretium varius ante ex et urna. Nulla scelerisque nec felis at vulputate. Proin ornare metus at est ultrices suscipit. Vivamus tincidunt lorem a felis condimentum placerat. Duis purus ipsum, tempus id luctus ac, varius non ligula. Nulla ultricies, diam non rutrum vestibulum, lacus lacus volutpat nisi, eu posuere odio lorem eget orci. Maecenas eget eros augue. Aenean bibendum ipsum sodales erat vehicula consectetur. Fusce ut ligula nec nibh ornare efficitur at ut mi. Nunc bibendum lobortis turpis, in sodales magna dignissim ac. Aenean vehicula neque non risus blandit hendrerit. In eget bibendum eros. Mauris egestas magna lacus, ultricies mattis odio faucibus eu.</string>
</resources>