<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClothesActivity">

    <TextView
        android:id="@+id/workoutTitle"
        android:layout_width="390dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/clothes"
        android:textSize="20sp" />

    <ExpandableListView
        android:id="@+id/expandableListView"
        android:layout_width="400dp"
        android:layout_height="580dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp" />

    <ImageView
        android:id="@+id/img"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_below="@+id/expandableListView"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/new_cloth"
        android:contentDescription="@string/clothes_desc" />

    <TextView
        android:id="@+id/text"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_below="@+id/expandableListView"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/img"
        android:text="@string/lorem"
        android:textSize="12sp" />

</RelativeLayout>