<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TodoActivity">

    <TextView
        android:id="@+id/fruit_title"
        android:layout_width="390dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/todo"
        android:textSize="20sp" />

    <ListView
        android:id="@+id/fruit_list"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp" />

    <ImageView
        android:id="@+id/img"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="640dp"
        android:contentDescription="@string/todo_desc"
        app:srcCompat="@drawable/new_todo" />

    <TextView
        android:id="@+id/txt"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="640dp"
        android:layout_toEndOf="@+id/img"
        android:text="@string/lorem"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textOrah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fruit_list"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/todo_desc"
        android:text="Orašasto" />

    <NumberPicker
        android:id="@+id/pickerOrah"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@+id/textOrah"
        android:layout_marginStart="10dp"
        android:layout_marginTop="24dp"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/textSjemenke"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fruit_list"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/todo_desc"
        android:layout_toEndOf="@+id/pickerOrah"
        android:text="Sjemenke" />

    <NumberPicker
        android:id="@+id/pickerSjemenke"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@+id/textOrah"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:layout_toEndOf="@+id/pickerOrah"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/textSuho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fruit_list"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/todo_desc"
        android:layout_toEndOf="@+id/pickerSjemenke"
        android:text="Sušeno" />

    <NumberPicker
        android:id="@+id/pickerSuho"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@+id/textOrah"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:layout_toEndOf="@+id/pickerSjemenke"
        android:textSize="10sp" />

</RelativeLayout>